# metalps

./: .gitignore  CLAUDE.md  Cargo.toml  README.org  flake.nix  rust-template.json  rustfmt.toml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  logging.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/exporter/: Cargo.toml
crates/exporter/src/: config.rs  gpu_metrics.rs  lib.rs  logging.rs  main.rs  web_base.rs
crates/exporter/tests/: integration_test.rs
crates/gpu-load/: Cargo.toml
crates/gpu-load/src/: main.rs
crates/lib/: Cargo.toml
crates/lib/src/: collector.rs  lib.rs  logging.rs  output.rs  types.rs
crates/lib/src/macos/: iokit.rs  mach.rs  mod.rs  proc.rs
crates/lib/tests/: integration_test.rs
nix/modules/: darwin-exporter.nix  nixos-exporter.nix
