[package]
name = "metalps-exporter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "metalps_exporter"
path = "src/lib.rs"

[[bin]]
name = "metalps-exporter"
path = "src/main.rs"

[dependencies]
rust-template-foundation = { workspace = true, features = ["server", "cli"] }
metalps-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-listener = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
prometheus = { workspace = true }
aide = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
prometheus = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
